standAlone/parser/LuaParser.java
// $ANTLR 3.5.2 grammars/Lua.g 2014-05-06 11:41:22

package parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class LuaParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGNMENT", "ASSIGNMENT_VAR", 
		"Add", "And", "Any", "Assign", "BinaryExponent", "Break", "CALL", "CBrace", 
		"CBrack", "CHUNK", "COL_CALL", "CONDITION", "CPar", "Col", "ColCol", "Comma", 
		"Comment", "Digit", "Div", "Do", "Dot", "DotDot", "DotDotDot", "EXPR_LIST", 
		"Else", "Elseif", "End", "Eq", "EscapeSequence", "Exponent", "FIELD", 
		"FIELD_LIST", "FOR_IN", "FUNCTION", "FUNCTION_ASSIGNMENT", "False", "For", 
		"Function", "GT", "GTEq", "Goto", "HexDigit", "HexDigits", "INDEX", "If", 
		"In", "LABEL", "LOCAL_ASSIGNMENT", "LT", "LTEq", "Length", "Letter", "LineBreak", 
		"Local", "LongBracket", "Minus", "Mod", "Mult", "NAME_LIST", "NEq", "Name", 
		"Nil", "Not", "Number", "OBrace", "OBrack", "OPar", "Or", "PARAM_LIST", 
		"Pow", "Repeat", "Return", "SCol", "Space", "String", "TABLE", "Then", 
		"True", "UNARY_MINUS", "Until", "VAR", "VAR_LIST", "While"
	};
	public static final int EOF=-1;
	public static final int ASSIGNMENT=4;
	public static final int ASSIGNMENT_VAR=5;
	public static final int Add=6;
	public static final int And=7;
	public static final int Any=8;
	public static final int Assign=9;
	public static final int BinaryExponent=10;
	public static final int Break=11;
	public static final int CALL=12;
	public static final int CBrace=13;
	public static final int CBrack=14;
	public static final int CHUNK=15;
	public static final int COL_CALL=16;
	public static final int CONDITION=17;
	public static final int CPar=18;
	public static final int Col=19;
	public static final int ColCol=20;
	public static final int Comma=21;
	public static final int Comment=22;
	public static final int Digit=23;
	public static final int Div=24;
	public static final int Do=25;
	public static final int Dot=26;
	public static final int DotDot=27;
	public static final int DotDotDot=28;
	public static final int EXPR_LIST=29;
	public static final int Else=30;
	public static final int Elseif=31;
	public static final int End=32;
	public static final int Eq=33;
	public static final int EscapeSequence=34;
	public static final int Exponent=35;
	public static final int FIELD=36;
	public static final int FIELD_LIST=37;
	public static final int FOR_IN=38;
	public static final int FUNCTION=39;
	public static final int FUNCTION_ASSIGNMENT=40;
	public static final int False=41;
	public static final int For=42;
	public static final int Function=43;
	public static final int GT=44;
	public static final int GTEq=45;
	public static final int Goto=46;
	public static final int HexDigit=47;
	public static final int HexDigits=48;
	public static final int INDEX=49;
	public static final int If=50;
	public static final int In=51;
	public static final int LABEL=52;
	public static final int LOCAL_ASSIGNMENT=53;
	public static final int LT=54;
	public static final int LTEq=55;
	public static final int Length=56;
	public static final int Letter=57;
	public static final int LineBreak=58;
	public static final int Local=59;
	public static final int LongBracket=60;
	public static final int Minus=61;
	public static final int Mod=62;
	public static final int Mult=63;
	public static final int NAME_LIST=64;
	public static final int NEq=65;
	public static final int Name=66;
	public static final int Nil=67;
	public static final int Not=68;
	public static final int Number=69;
	public static final int OBrace=70;
	public static final int OBrack=71;
	public static final int OPar=72;
	public static final int Or=73;
	public static final int PARAM_LIST=74;
	public static final int Pow=75;
	public static final int Repeat=76;
	public static final int Return=77;
	public static final int SCol=78;
	public static final int Space=79;
	public static final int String=80;
	public static final int TABLE=81;
	public static final int Then=82;
	public static final int True=83;
	public static final int UNARY_MINUS=84;
	public static final int Until=85;
	public static final int VAR=86;
	public static final int VAR_LIST=87;
	public static final int While=88;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public LuaParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public LuaParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return LuaParser.tokenNames; }
	@Override public String getGrammarFileName() { return "grammars/Lua.g"; }



	  private boolean addSelf = false;

	  private CommonTree createPowAST(List tokens) {
	    int n = tokens.size();

	    CommonTree ast = new CommonTree(new CommonToken(Pow, "^"));
	    ast.addChild((CommonTree)tokens.get(n - 2));
	    ast.addChild((CommonTree)tokens.get(n - 1));

	    for(int i = n - 3; i >= 0; i--) {
	      CommonTree temp = new CommonTree(new CommonToken(Pow, "^"));
	      temp.addChild((CommonTree)tokens.get(i));
	      temp.addChild(ast);
	      ast = temp;
	    }

	    return ast;
	  }

	  private CommonTree namesToVar(List<String> names, String name) {
	    names.add(name);
	    return namesToVar(names);
	  }

	  private CommonTree namesToVar(List<String> names) {

	    if(names.size() == 1) {
	      return new CommonTree(new CommonToken(Name, names.get(0)));
	    }

	    CommonTree ast = new CommonTree(new CommonToken(VAR, "VAR"));

	    ast.addChild(new CommonTree(new CommonToken(Name, names.get(0))));

	    for(int i = 1; i < names.size(); i++) {
	      CommonTree indexNode = new CommonTree(new CommonToken(INDEX, "INDEX"));
	      indexNode.addChild(new CommonTree(new CommonToken(Name, names.get(i))));
	      ast.addChild(indexNode);
	    }

	    return ast;
	  }

	  @Override
	  public void reportError(RecognitionException e) {
	    throw new RuntimeException(e); 
	  }


	public static class parse_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "parse"
	// grammars/Lua.g:194:1: parse : chunk EOF -> chunk ;
	public final LuaParser.parse_return parse() throws RecognitionException {
		LuaParser.parse_return retval = new LuaParser.parse_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope chunk1 =null;

		CommonTree EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_chunk=new RewriteRuleSubtreeStream(adaptor,"rule chunk");

		try {
			// grammars/Lua.g:195:2: ( chunk EOF -> chunk )
			// grammars/Lua.g:195:4: chunk EOF
			{
			pushFollow(FOLLOW_chunk_in_parse857);
			chunk1=chunk();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_chunk.add(chunk1.getTree());
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_parse859); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: chunk
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 195:14: -> chunk
			{
				adaptor.addChild(root_0, stream_chunk.nextTree());
			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "parse"


	public static class chunk_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "chunk"
	// grammars/Lua.g:198:1: chunk : ( stat )* ( ret_stat )? -> ^( CHUNK ( stat )* ( ret_stat )? ) ;
	public final LuaParser.chunk_return chunk() throws RecognitionException {
		LuaParser.chunk_return retval = new LuaParser.chunk_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope stat3 =null;
		ParserRuleReturnScope ret_stat4 =null;

		RewriteRuleSubtreeStream stream_stat=new RewriteRuleSubtreeStream(adaptor,"rule stat");
		RewriteRuleSubtreeStream stream_ret_stat=new RewriteRuleSubtreeStream(adaptor,"rule ret_stat");

		try {
			// grammars/Lua.g:199:2: ( ( stat )* ( ret_stat )? -> ^( CHUNK ( stat )* ( ret_stat )? ) )
			// grammars/Lua.g:199:4: ( stat )* ( ret_stat )?
			{
			// grammars/Lua.g:199:4: ( stat )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==Break||LA1_0==ColCol||LA1_0==Do||(LA1_0 >= For && LA1_0 <= Function)||LA1_0==Goto||LA1_0==If||LA1_0==Local||LA1_0==Name||LA1_0==OPar||LA1_0==Repeat||LA1_0==SCol||LA1_0==While) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// grammars/Lua.g:199:4: stat
					{
					pushFollow(FOLLOW_stat_in_chunk874);
					stat3=stat();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_stat.add(stat3.getTree());
					}
					break;

				default :
					break loop1;
				}
			}

			// grammars/Lua.g:199:10: ( ret_stat )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==Return) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// grammars/Lua.g:199:10: ret_stat
					{
					pushFollow(FOLLOW_ret_stat_in_chunk877);
					ret_stat4=ret_stat();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_ret_stat.add(ret_stat4.getTree());
					}
					break;

			}

			// AST REWRITE
			// elements: stat, ret_stat
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 199:20: -> ^( CHUNK ( stat )* ( ret_stat )? )
			{
				// grammars/Lua.g:199:23: ^( CHUNK ( stat )* ( ret_stat )? )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CHUNK, "CHUNK"), root_1);
				// grammars/Lua.g:199:31: ( stat )*
				while ( stream_stat.hasNext() ) {
					adaptor.addChild(root_1, stream_stat.nextTree());
				}
				stream_stat.reset();

				// grammars/Lua.g:199:37: ( ret_stat )?
				if ( stream_ret_stat.hasNext() ) {
					adaptor.addChild(root_1, stream_ret_stat.nextTree());
				}
				stream_ret_stat.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "chunk"


	public static class stat_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "stat"
	// grammars/Lua.g:202:1: stat : ( ( assignment )=> assignment | var[false] | do_block | while_stat | repeat_stat | local | goto_stat | if_stat | for_stat | function | label | Break | ';' ->);
	public final LuaParser.stat_return stat() throws RecognitionException {
		LuaParser.stat_return retval = new LuaParser.stat_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token Break16=null;
		Token char_literal17=null;
		ParserRuleReturnScope assignment5 =null;
		ParserRuleReturnScope var6 =null;
		ParserRuleReturnScope do_block7 =null;
		ParserRuleReturnScope while_stat8 =null;
		ParserRuleReturnScope repeat_stat9 =null;
		ParserRuleReturnScope local10 =null;
		ParserRuleReturnScope goto_stat11 =null;
		ParserRuleReturnScope if_stat12 =null;
		ParserRuleReturnScope for_stat13 =null;
		ParserRuleReturnScope function14 =null;
		ParserRuleReturnScope label15 =null;

		CommonTree Break16_tree=null;
		CommonTree char_literal17_tree=null;
		RewriteRuleTokenStream stream_SCol=new RewriteRuleTokenStream(adaptor,"token SCol");

		try {
			// grammars/Lua.g:203:2: ( ( assignment )=> assignment | var[false] | do_block | while_stat | repeat_stat | local | goto_stat | if_stat | for_stat | function | label | Break | ';' ->)
			int alt3=13;
			switch ( input.LA(1) ) {
			case OPar:
				{
				int LA3_1 = input.LA(2);
				if ( (synpred1_Lua()) ) {
					alt3=1;
				}
				else if ( (true) ) {
					alt3=2;
				}

				}
				break;
			case Name:
				{
				int LA3_2 = input.LA(2);
				if ( (synpred1_Lua()) ) {
					alt3=1;
				}
				else if ( (true) ) {
					alt3=2;
				}

				}
				break;
			case Do:
				{
				alt3=3;
				}
				break;
			case While:
				{
				alt3=4;
				}
				break;
			case Repeat:
				{
				alt3=5;
				}
				break;
			case Local:
				{
				alt3=6;
				}
				break;
			case Goto:
				{
				alt3=7;
				}
				break;
			case If:
				{
				alt3=8;
				}
				break;
			case For:
				{
				alt3=9;
				}
				break;
			case Function:
				{
				alt3=10;
				}
				break;
			case ColCol:
				{
				alt3=11;
				}
				break;
			case Break:
				{
				alt3=12;
				}
				break;
			case SCol:
				{
				alt3=13;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// grammars/Lua.g:203:4: ( assignment )=> assignment
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_assignment_in_stat906);
					assignment5=assignment();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment5.getTree());

					}
					break;
				case 2 :
					// grammars/Lua.g:204:4: var[false]
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_var_in_stat911);
					var6=var(false);
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, var6.getTree());

					}
					break;
				case 3 :
					// grammars/Lua.g:205:4: do_block
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_do_block_in_stat942);
					do_block7=do_block();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, do_block7.getTree());

					}
					break;
				case 4 :
					// grammars/Lua.g:206:4: while_stat
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_while_stat_in_stat948);
					while_stat8=while_stat();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, while_stat8.getTree());

					}
					break;
				case 5 :
					// grammars/Lua.g:207:4: repeat_stat
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_repeat_stat_in_stat953);
					repeat_stat9=repeat_stat();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, repeat_stat9.getTree());

					}
					break;
				case 6 :
					// grammars/Lua.g:208:4: local
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_local_in_stat958);
					local10=local();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, local10.getTree());

					}
					break;
				case 7 :
					// grammars/Lua.g:209:4: goto_stat
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_goto_stat_in_stat963);
					goto_stat11=goto_stat();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, goto_stat11.getTree());

					}
					break;
				case 8 :
					// grammars/Lua.g:210:4: if_stat
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_if_stat_in_stat968);
					if_stat12=if_stat();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, if_stat12.getTree());

					}
					break;
				case 9 :
					// grammars/Lua.g:211:4: for_stat
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_for_stat_in_stat973);
					for_stat13=for_stat();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, for_stat13.getTree());

					}
					break;
				case 10 :
					// grammars/Lua.g:212:4: function
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_function_in_stat978);
					function14=function();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, function14.getTree());
